# VishnuCommon

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  README.md
CMake/: CPackConfig.cmake
examples/: Auxiliar.hpp  CMakeLists.txt  vishnucommon-ArgumentParsing.cpp  vishnucommon-JsonSerialization.cpp  vishnucommon-XmlSerialization.cpp
vishnucommon/: Args.cpp  Args.h  CMakeLists.txt  CSV.h  Debug.hpp  Definitions.hpp  Enums.hpp  Error.hpp  Files.cpp  Files.h  JSON.h  Maths.hpp  Matrices.cpp  Matrices.h  Strings.cpp  Strings.hpp  Vectors.hpp  XML.h
vishnucommon/customobjects/: ClickableLabel.cpp  ClickableLabel.h
vishnucommon/json/: DataSet.cpp  DataSet.h  DataSets.cpp  DataSets.h  Metadata.cpp  Metadata.h  Property.cpp  Property.h  PropertyGroups.cpp  PropertyGroups.h
vishnucommon/xml/: Camera.cpp  Camera.h  Colors.cpp  Colors.h  Configuration.cpp  Configuration.h  Data.cpp  Data.h  Feature.cpp  Feature.h  Features.cpp  Features.h  PyramidalXML.cpp  PyramidalXML.h  Set.cpp  Set.h  Vec3.cpp  Vec3.h
